added graphs to aggregate report

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,13 +2,21 @@
 <div style="width: 100%">
   <table style="width: 100%;" cellspacing="15px">
     <tr>
-      <td style="vertical-align: top;text-align:justify;margin-left: 10px;font-family: arial;font-size:30px;">
+      <td colspan="2" style="vertical-align: top;text-align:justify;margin-left: 10px;font-family: arial;font-size:30px;">
         The drug monitoring program (DMP) was designed as a dissemination tool for drug prescription and dispensation
         information. Data from various sites with electronic medical record systems (EMRs) is collected and various
         statistics are calculated and made available here. Various reports are also available under our publications section.
       </td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #000000;height: 100%;vertical-align: text-top;">
+         <div style="text-align: center;">
+            Notices
+         </div>
+      </td>
+
       <td style="width: 55%;">
-        <div  style="height: 600px;">
+        <div>
           <%= render "graph" %>
         </div>
       </td>
