--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -2,10 +2,10 @@
 
     function siteMenu()
     {
-        var path = ["/report/site_list", "/report/report_menu?type=drug report",
+        var path = [ "/report/report_menu?type=drug report",
                     "/report/report_menu?type=site report","/report/report_menu?type=aggregate report"];
-        var icons = ['view_doc.png','pills3.png','Hospital-icon.png','aggregate.png'];
-        var title = ['ARV Sites', 'Drug Report', 'Site Report', 'Aggregate Report'];
+        var icons = ['pills3.png','Hospital-icon.png','aggregate.png'];
+        var title = ['Drug Report', 'Site Report', 'Aggregate Report'];
         loadMenu(title,icons,path);
     }
 
@@ -56,7 +56,7 @@
 
 
 
-<div id='panel' style="height:700px; overflow:auto;">
+<div id='panel' style="height: 80%; overflow:auto;">
 
 
 </div>
