--- a/app/views/home/_graph.html.erb
+++ b/app/views/home/_graph.html.erb
@@ -281,7 +281,7 @@
 </script>
 
 <div style="border: 1.5px solid #000000; border-radius:10px;height: 100%;width: 100%;">
-  <div onLoad="graph()"  id="graph" style="height: 98%;width: 100%;">
+  <div onLoad="graph()"  id="graph" >
 
   </div>
 
