--- a/app/views/report/aggregate_report.html.erb
+++ b/app/views/report/aggregate_report.html.erb
@@ -1,28 +1,147 @@
-<link rel="stylesheet" type="text/css" href="/stylesheets/demo_table.css" />
-<script type="text/javascript" language="javascript" src="/javascripts/jquery.js"></script>
-<script type="text/javascript" language="javascript" src="/javascripts/jquery.dataTables.js"></script>
-<script src="/javascripts/highcharts.js"></script>
-<script src="/javascripts/exporting.js"></script>
-<script src="/javascripts/standalone-framework.src.js"></script>
 
 <script type="text/javascript" charset="utf-8">
     $(document).ready(function() {
         $('#drugs').dataTable({
             "aaSorting": [[ 0, "asc" ]],
-            'iDisplayLength': 25,
+            'iDisplayLength': 20,
             "bLengthChange": false,
             "bFilter": false
         });
     } );
+</script>
+<script type="text/javascript" charset="utf-8">
+    function trend()
+    {
+        try{
+
+            var prescriptions = [];
+            var dispensations = [];
+        <% (@disp_trend || []).each do |drug, values| %>
+            var amounts = [];
+        <% (values || []).each do |day,value|%>
+            amounts.push([Date.UTC(<%= day.year %>,<%= day.month - 1 %>,<%= day.day %>),<%= value %>])
+        <% end%>
+            dispensations.push({name:'<%= drug %>', data: amounts});
+        <% end %>
+
+        <% (@pres_trend || []).each do |drug, values| %>
+            var amounts = [];
+        <% (values || []).each do |day,value|%>
+            amounts.push([Date.UTC(<%= day.year %>,<%= day.month - 1 %>,<%= day.day %>),<%= value %>])
+        <% end%>
+            prescriptions.push({name:'<%= drug %>', data: amounts});
+        <% end %>
+
+            var chart = new Highcharts.Chart({
+                chart: {
+                    renderTo: "pres_trends"
+                },
+                xAxis: {
+
+                    title: {
+                        text: 'Days'
+                    },
+                    type:'datetime',
+                    dateTimeLabelFormats: { // don't display the dummy year
+                        month: '%e. %b',
+                        year: '%b'
+                    }
+
+
+                },
+                tooltip: {
+                    formatter: function() {
+                        return '<b>'+ this.series.name +'</b><br/>'+
+                                Highcharts.dateFormat('%e %b %Y', this.x) +': '+ this.y +' pills';
+                    }
+                },
+                yAxis: {
+                    title: {
+                        text: 'Dose Amounts'
+                    },
+                    min: 0
+                },
+                title: {
+                    text : "Drug Prescription Trend"
+                },
+                series: prescriptions,
+                exporting: { enabled: false },
+                credits: {enabled: false}
+            });
+
+            var chart = new Highcharts.Chart({
+                chart: {
+                    renderTo: "disp_trends"
+                },
+                xAxis: {
+
+                    title: {
+                        text: 'Days'
+                    },
+                    type:'datetime',
+                    dateTimeLabelFormats: { // don't display the dummy year
+                        month: '%e. %b',
+                        year: '%b'
+                    }
+
+                },
+                tooltip: {
+                    formatter: function() {
+                        return '<b>'+ this.series.name +'</b><br/>'+
+                                Highcharts.dateFormat('%e %b %Y', this.x) +': '+ this.y +' pills';
+                    }
+                },
+                yAxis: {
+                    title: {
+                        text: 'Dose Amounts'
+                    },
+                    min : 0
+                },
+                title: {
+                    text : "Drug Dispensation Trend"
+                },
+                series: dispensations,
+                exporting: { enabled: false },
+                credits: {enabled: false}
+            });
+
+        }
+        catch(ex)
+        {
+            alert('error in jQuery call:' + ex);
+        }
+    }
+    setTimeout("trend()",20);
 </script>
 
 <style type="text/css">
     div.graph{
         border: 1px solid #15191C;
         width: 100%;
-        height: 370px;
+
     }
 </style>
+
+<div style="text-align: center;">
+  <table  style="width: 99%;margin-left: 0.5%;">
+    <tr>
+      <td width="50%">
+        <div style="height: 100%;" class="graph">
+          <div style="height: 98%;" id="pres_trends">
+
+          </div>
+        </div>
+      </td>
+      <td>
+        <div style="height: 100%;" class="graph">
+          <div  id="disp_trends">
+
+          </div>
+        </div>
+      </td>
+    </tr>
+  </table>
+</div>
 
 <div style="width: 100%;text-align: center;">
   <table class="display" id="drugs" width="100%">
@@ -41,14 +160,12 @@
             <tr>
               <td><%= day.strftime('%d %B %Y') %></td>
               <td><%= drug %></td>
-              <td><%= value["prescription"] %></td>
-              <td><%= value["dispensation"] %></td>
-              <td><%= value["prescription"] - value["dispensation"] %></td>
+              <td><%= number_with_delimiter(value["prescription"], :delimeter => ',') %></td>
+              <td><%= number_with_delimiter(value["dispensation"], :delimeter => ',') %></td>
+              <td><%= number_with_delimiter(value["prescription"] - value["dispensation"], :delimeter => ',') %></td>
             </tr>
         <% end %>
     <% end %>
     </tbody>
-
   </table>
-
 </div>
