--- a/app/views/administration/index.html.erb
+++ b/app/views/administration/index.html.erb
@@ -2,9 +2,9 @@
 
     function loadIcons()
     {
-        var path = ["/publication/new", "/publication/edit","/administration/add_site","/administration/list_sites","/user/create", "/user/edit"];
-        var icons = ['add_publication.png','edit_publication.png','add_site.png','Hospital-icon.png','add_user.png','edit_user.png'];
-        var title = ["Add New Publication","Edit Publication","Add Site","Edit Sites","Add User", "Edit User"];
+        var path = ["/administration/add_site","/administration/list_sites","/user/create", "/user/edit"];
+        var icons = ['add_site.png','Hospital-icon.png','add_user.png','edit_user.png'];
+        var title = ["Add Site","Edit Sites","Add User", "Edit User"];
         loadMenu(title,icons,path);
     }
 
