--- a/app/views/home/_graph.html.erb
+++ b/app/views/home/_graph.html.erb
@@ -280,10 +280,8 @@
     //-->
 </script>
 
-<div style="border: 1.5px solid #000000; border-radius:10px;height: 100%;width: 100%;">
-  <div onLoad="graph()"  id="graph" >
+<div onLoad="graph()"  id="graph" style="border: 1.5px solid #000000; border-radius:10px;height: 15cm;width: 100%;">
 
-  </div>
 
 </div>
 
