--- a/app/views/report/report_menu.html.erb
+++ b/app/views/report/report_menu.html.erb
@@ -1,4 +1,22 @@
-<script language="javascript" type="text/javascript" src="/javascripts/calendar.js"></script>
+<script language="javascript" type="text/javascript" src="/javascripts/jsDatePick.min.1.3.js"></script>
+
+<script type="text/javascript">
+    window.onload = function(){
+        new JsDatePick({
+            useMode:2,
+            target:"start_date",
+            dateFormat:"%d-%M-%Y"
+
+        });
+        new JsDatePick({
+            useMode:2,
+            target:"end_date",
+            dateFormat:"%d-%M-%Y"
+
+        });
+    };
+</script>
+
 <style type="text/css">
     input{
         width: auto;
@@ -26,54 +44,49 @@
         font-weight:bold;
     }
 </style>
-
+<link rel="stylesheet" type="text/css" href="/stylesheets/jsDatePick_ltr.min.css" />
 
 <div class="main_container">
 
-  <table class="halfpage" cellspacing="10px" cellpadding="20px">
     <form method="post" action="/report/process_report" >
+      <table class="halfpage" cellspacing="10px" cellpadding="20px">
       <caption style="font-family: arial;font-size:34px;"><%= params[:type].titleize %> Details</caption>
 
-      <% if params[:type] == 'site report' %>
-          <tr>
-            <td id="site_lbl">Select Site</td>
-            <td>
-              <select name="site_name" id='site'>
-                <% (@sites || []).each do |site| %>
-                  <option><%= site %></option>
-                <% end %>
-              </select>
-            </td>
-          </tr>
-      <% elsif params[:type] == 'drug report' %>
-          <tr>
-            <td id="drug_lbl">Select Drug</td>
-            <td>
-              <select name="drug" id='drug'>
-                <% (@drugs || []).each do |drug| %>
-                    <option><%= drug %></option>
-                <% end %>
-              </select>
-            </td>
-          </tr>
-      <% end %>
+
+      <tr style="display:<%= params[:type].eql?('site report') ? '' : 'none' %> ">
+        <td id="site_lbl">Select Site</td>
+        <td>
+          <select name="site_name" id='site'>
+            <% (@sites || []).each do |site| %>
+                <option><%= site %></option>
+            <% end %>
+          </select>
+        </td>
+      </tr>
+      <tr style="display:<%= params[:type].eql?('drug report') ? '' : 'none' %> ">
+        <td id="drug_lbl">Select Drug</td>
+        <td>
+          <select name="drug" id='drug'>
+            <% (@drugs || []).each do |drug| %>
+                <option><%= drug %></option>
+            <% end %>
+          </select>
+        </td>
+      </tr>
       <tr>
         <td id="start_date_lbl">Start Date</td>
-        <td><input id="start_date" type="date" onclick="var y = (new Date()).getFullYear(); loadCalendar(this.id,y-10, y+1, false); checkDate(this.id)" name="start_date" value=""></td>
+        <td><input id="start_date" type="text" name="start_date" value=""></td>
       </tr>
       <tr>
         <td id="end_date_lbl">End Date</td>
-        <td><input id="end_date" type="date" onclick="var y = (new Date()).getFullYear(); loadCalendar(this.id,y-10, y+1, false); checkDate(this.id)" name="end_date" value=""></td>
+        <td><input id="end_date" type="text" name="end_date" value=""></td>
       </tr>
       <%= hidden_field_tag("report_type", params[:type])%>
+      </table>
     </form>
-    <tr>
-      <td colspan="2" style="text-align: center;">
+      <div style="text-align: center;height: 100px;">
         <button onclick="verify_form();" style="width: 300px;height:60px;border-radius: 30px;" class="main">Generate</button>
-      </td>
-    </tr>
-  </table>
-
+      </div>
 </div>
 
 <script type="text/javascript">
@@ -81,23 +94,27 @@
     function verify_form()
     {
 
-      var type = '<%= params[:type]%>';
-      if(document.getElementById(''))
-      {
-
-      }
-      else if(document.getElementById(''))
-      {
-
-      }
-      else if(document.getElementById(''))
-      {
-
-      }
-      else
-      {
-          document.forms[0].submit();
-      }
+        var type = '<%= params[:type]%>';
+        if(document.getElementById('start_date').value.trim() == "")
+        {
+            jAlert("Please provide start date for report", "Incomplete Information");
+        }
+        else if(document.getElementById('end_date').value.trim() == "")
+        {
+            jAlert("Please provide end date for report", "Incomplete Information");
+        }
+        else if((type == "site report") && (document.getElementById('site').value.trim() == ""))
+        {
+            jAlert("Please provide site name", "Incomplete Information");
+        }
+        else if((type= "drug report") && (document.getElementById('drug').value.trim() == ""))
+        {
+            jAlert("Please provide drug name", "Incomplete Information");
+        }
+        else
+        {
+            document.forms[0].submit();
+        }
 
 
     }
