fixed bug in report dates

--- a/app/views/report/drug_report.html.erb
+++ b/app/views/report/drug_report.html.erb
@@ -105,7 +105,7 @@
               title: {
                   text : "Drug Prescription and Dispensation Trend"
               },
-              series: [{name: "Prescriptions", data: prescriptions}, {name: "Dispensations", data: dispensations}],
+              series: [{name: "Prescriptions", data: prescriptions, color:"#FF9950"}, {name: "Dispensations", data: dispensations, color: "#0D233A"}],
               exporting: { enabled: false },
               credits: {enabled: false}
           });
