fixed css for datepicker

--- a/app/views/report/report_menu.html.erb
+++ b/app/views/report/report_menu.html.erb
@@ -44,7 +44,7 @@
         font-weight:bold;
     }
 </style>
-<link rel="stylesheet" type="text/css" href="/stylesheets/jsDatePick_ltr.min.css" />
+<link rel="stylesheet" type="text/css" media="all" href="/stylesheets/jsDatePick_ltr.min.css" />
 
 <div class="main_container">
 
