changed color for notices on home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,11 +9,11 @@
      border-radius: 10px 10px 0px 0px;
   }
   tr.odd{
-      background-color: #CDBFAC;
+      background-color: #FFCC00;
       font-family: arial;
   }
   tr.even{
-      background-color: white;
+      background-color: #ffffff;
       font-family: arial;
   }
 </style>
