--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -1,57 +1,61 @@
 <script type="text/javascript">
 
-    function siteMenu()
-    {
-        var path = [ "/report/report_menu?type=drug report",
-                    "/report/report_menu?type=site report","/report/report_menu?type=aggregate report"];
-        var icons = ['pills3.png','Hospital-icon.png','aggregate.png'];
-        var title = ['Drug Report', 'Site Report', 'Aggregate Report'];
-        loadMenu(title,icons,path);
+  function siteMenu()
+  {
+    var path = [
+      "/report/report_menu?type=drug report",
+      "/report/report_menu?type=site report",
+      "/report/report_menu?type=aggregate report",
+      "/report/stock_out_estimates"
+    ];
+    var icons = ['pills3.png','Hospital-icon.png','aggregate.png', 'pills3.png'];
+    var title = ['Drug Report', 'Site Report', 'Aggregate Report', "Stock Out Report"];
+    loadMenu(title,icons,path);
+  }
+
+  function loadMenu(fields, images,paths){
+    document.getElementById("panel").innerHTML = "";
+
+    for(var i = 0; i < fields.length; i++){
+
+      var div = document.createElement("div");
+      div.style.width = "200px";
+      div.style.height = "160px";
+      div.style.textAlign = "center";
+      div.style.cssFloat = "left";
+      div.style.padding = "5px";
+      div.style.opacity = "1";
+      div.style.cursor = "pointer";
+      div.setAttribute("link", paths[i]);
+      div.className = "menu_button blue";
+
+      div.onclick = function(){
+        window.location = this.getAttribute("link");
+      }
+
+      document.getElementById("panel").appendChild(div);
+
+      var img = document.createElement("img");
+      img.src = "/images/" + images[i];
+      img.setAttribute("alt", fields[i]);
+      img.height = "90";
+      img.style.margin = "5px";
+
+      div.appendChild(img);
+
+      div.innerHTML += "<div style='padding: 5px; margin-top: 10px;'>" + fields[i] + "</div>";
+
     }
+  }
 
-    function loadMenu(fields, images,paths){
-        document.getElementById("panel").innerHTML = "";
-
-        for(var i = 0; i < fields.length; i++){
-
-            var div = document.createElement("div");
-            div.style.width = "200px";
-            div.style.height = "160px";
-            div.style.textAlign = "center";
-            div.style.cssFloat = "left";
-            div.style.padding = "5px";
-            div.style.opacity = "1";
-            div.style.cursor = "pointer";
-            div.setAttribute("link", paths[i]);
-            div.className = "menu_button blue";
-
-            div.onclick = function(){
-                window.location = this.getAttribute("link");
-            }
-
-            document.getElementById("panel").appendChild(div);
-
-            var img = document.createElement("img");
-            img.src = "/images/" + images[i];
-            img.setAttribute("alt", fields[i]);
-            img.height = "90";
-            img.style.margin = "5px";
-
-            div.appendChild(img);
-
-            div.innerHTML += "<div style='padding: 5px; margin-top: 10px;'>" + fields[i] + "</div>";
-
-        }
-    }
-
-    setTimeout("siteMenu()", 200);
+  setTimeout("siteMenu()", 200);
 </script>
 
 <style type="text/css">
 
-    td{
-        text-align: center;
-    }
+  td{
+    text-align: center;
+  }
 </style>
 
 
