--- a/app/views/report/stock_out_estimates.erb
+++ b/app/views/report/stock_out_estimates.erb
@@ -61,14 +61,14 @@
         </select>
       </td>
       <td>&nbsp</td>
-      <td>&nbsp</td>
-      <td>&nbsp</td>
+      <td colspan="2" id ="date" style="color: lightblue; font-weight: bold;">&nbsp</td>
+
     </tr>
     <tr>
       <th style="width: 43%">Drug </th>
       <th style="width: 13%">Stock level</th>
       <th style="width: 22%">Dispensation rate <sub style="font-size: 12px;">( per day)</sub></th>
-      <th>Stockout date</th>
+      <th>Stockout date <sub style="font-size: 12px;">(estimate)</sub></th>
     </tr>
     <tr>
       <td colspan="4">
@@ -86,11 +86,12 @@
 
 <script type="text/javascript">
   <!--
-  var stocks = {}
+  var stocks = {};
+  var update_dates = {};
 
 <%@stocks.keys.each do |key|%>
   
-    stocks["<%= key %>"] = {}
+    stocks["<%= key %>"] = {};
   <%@stocks[key].keys.each do |drug|%>
 
       stocks["<%= key %>"]["<%= drug %>"] = {};
@@ -99,13 +100,19 @@
     <%end%>
   <%end%>
 <%end%>
+
+<%@updates.each do |key, value|%>
+    update_dates["<%= key %>"] = "<%= value %>";
+<%end%>
   
  
   function loadSite(site)
   {
-    var data = stocks[site]
-    var drugs = Object.keys(data)
-    var table = document.getElementById("datalist")
+    var data = stocks[site];
+    var drugs = Object.keys(data);
+    var table = document.getElementById("datalist");
+    var dateLabel = document.getElementById("date");
+    dateLabel.innerHTML = ""
     table.innerHTML = "";
     
     for (var i = 0; i < drugs.length; i++){
@@ -132,7 +139,7 @@
       
       table.appendChild(row);
     }
-
+    dateLabel.innerHTML = "Updated on " + update_dates[site];
   }
   function create(divType, type, data){
     var node = document.createElement(divType);
