renamed report field header

--- a/app/views/report/stock_out_estimates.erb
+++ b/app/views/report/stock_out_estimates.erb
@@ -67,7 +67,7 @@
     <tr>
       <th style="width: 43%">Drug </th>
       <th style="width: 13%">Stock level</th>
-      <th style="width: 22%">Dispensation rate <sub style="font-size: 12px;">( per day)</sub></th>
+      <th style="width: 22%">Consumption rate <sub style="font-size: 12px;">( per day)</sub></th>
       <th>Stockout date <sub style="font-size: 12px;">(estimate)</sub></th>
     </tr>
     <tr>
