added an icon drug stock report

--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -8,7 +8,7 @@
       "/report/report_menu?type=aggregate report",
       "/report/stock_out_estimates"
     ];
-    var icons = ['pills3.png','Hospital-icon.png','aggregate.png', 'pills3.png'];
+    var icons = ['pills3.png','Hospital-icon.png','aggregate.png', 'd_icon.jpeg'];
     var title = ['Drug Report', 'Site Report', 'Aggregate Report', "Stock Out Report"];
     loadMenu(title,icons,path);
   }
