--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -2,15 +2,27 @@
 
   function siteMenu()
   {
-    var path = [
-      "/report/report_menu?type=drug report",
-      "/report/report_menu?type=site report",
-      "/report/report_menu?type=aggregate report",
-      "/report/stock_out_estimates"
-    ];
-    var icons = ['pills3.png','Hospital-icon.png','aggregate.png', 'd_icon.jpeg'];
-    var title = ['Drug Report', 'Site Report', 'Aggregate Report', "Stock Out Report"];
+<%if params[:stock]%>
+      var path = [
+        "/report/stock_out_estimates?type=calculated",
+        "/report/stock_out_estimates?type=verified_by_clinic",
+        "/report/stock_out_estimates?type=verified_by_supervision"
+      ];
+      var icons = ['calculated.jpeg','clinic.png', 'supervisor.jpg'];
+      var title = ['Calculated From Raw Data', 'Verified By Clinic', 'Verified By Supervision'];
+<%else%>
+      var path = [
+        "/report/report_menu?type=drug report",
+        "/report/report_menu?type=site report",
+        "/report/report_menu?type=aggregate report",
+        "/report/index?stock=true"
+      ];
+      var icons = ['pills3.png','Hospital-icon.png','aggregate.png', 'd_icon.jpeg'];
+      var title = ['Drug Report', 'Site Report', 'Aggregate Report', "Stock Reports"];
+<%end%>
+  
     loadMenu(title,icons,path);
+
   }
 
   function loadMenu(fields, images,paths){
