--- a/app/views/report/stock_out_estimates.erb
+++ b/app/views/report/stock_out_estimates.erb
@@ -37,7 +37,6 @@
     background: #66CC66;
     padding: 0px;
     padding-top: 2px;
-    padding-bottom: 4px;
     color: black;
   }
   #datalist td{
@@ -70,7 +69,7 @@
         </select>
       </td>
       <td>&nbsp</td>
-      <td colspan="2" id ="date" style="padding-left: 0px; color: lightblue; font-weight: bold;">&nbsp</td>
+      <td colspan="4" id ="date" style="padding-left: 0px; color: lightblue; font-weight: bold;">&nbsp</td>
 
     </tr>
     <tr>
@@ -79,10 +78,10 @@
       <th style="width: 13%">Total Dispensed</th>
       <th style="width: 13%">Consumption rate <br /><sub style="font-size: 12px;">( per day)</sub></th>
       <th style="width: 13%">Stock level<br /><sub style="font-size: 12px;">( pills)</sub></th>
-      <th>Stockout date <br /><sub style="font-size: 12px;">( estimate)</sub></th>
+      <th>Stockout date <br /><sub style="font-size: 12px;">( estimated)</sub></th>
     </tr>
     <tr>
-      <td colspan="4">
+      <td colspan="6">
         <div id ="data-holder" style="height: 535px; overflow: auto;">
           <table id ="datalist"  style="width: 100%;" width="100" cellspacing="4px" cellpadding="10px">
 
