--- a/app/views/home/_graph.html.erb
+++ b/app/views/home/_graph.html.erb
@@ -280,7 +280,7 @@
     //-->
 </script>
 
-<div onLoad="graph()"  id="graph" style="border: 1.5px solid #000000; border-radius:10px;height: 15cm;width: 100%;">
+<div onLoad="graph()"  id="graph" style="height: 100%;border: 1px solid #000000;border-radius: 5px;">
 
 
 </div>
