--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
       <td style="width: 60px;"><img src="/images/app.png" style="float: left;margin-top: 5px;margin-left: 5px;height:60px;"></td>
       <td style="text-align: left;vertical-align: text-top;">
         <span style="font-size: 35px;color: #C0C0C0;font-family:arial;">
-            Drug Monitoring Program
+            Pharmacy Monitoring Dashboard
           </span>
       </td>
 
