--- a/app/views/report/report_menu.html.erb
+++ b/app/views/report/report_menu.html.erb
@@ -20,11 +20,11 @@
 <style type="text/css">
     input{
         width: auto;
-        font-size: 28px;
+        font-size: 120%;
     }
     select{
         width: 100%;
-        font-size: 28px;
+        font-size: 120%;
     }
     button{
         width: auto;
@@ -35,18 +35,16 @@
         margin-right: auto;
         margin-top: 20px;
         margin-bottom: 20px;
+        font-family: arial;
     }
-    .halfpage tr{
-        height: 80px;
 
-    }
     .halfpage caption{
         font-weight:bold;
     }
 </style>
 <link rel="stylesheet" type="text/css" media="all" href="/stylesheets/jsDatePick_ltr.min.css" />
 
-<div class="main_container">
+<div  >
 
     <form method="post" action="/report/process_report" >
       <table class="halfpage" cellspacing="10px" cellpadding="20px">
