--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -1,78 +1,94 @@
+<html>
+<head>
 
-<link href="/stylesheets/jquery.alerts.css" rel="stylesheet" type="text/css" media="screen" />
-<script type="text/javascript">
-  <!--
-  function verify()
-  {
-      var username = document.getElementById("username").value;
-      var password = document.getElementById("password").value;
-
-      if (username.trim() == "" )
+  <link href="/stylesheets/jquery.alerts.css" rel="stylesheet" type="text/css" media="screen" />
+  <%= javascript_include_tag 'jquery' %>
+  <script type="text/javascript">
+      <!--
+      function verify()
       {
-          jAlert("Username can not be blank", "Incomplete Information");
-      }
-      else if (password.trim() == "" )
-      {
-          jAlert("Password can not be blank", "Incomplete Information");
-      }
-      else
-      {
+          var username = document.getElementById("username").value;
+          var password = document.getElementById("password").value;
 
-          jQuery.ajax({
-              url:  "/user/verify_user?password=" + password + "&username=" + username ,
-              type:"POST",
-              success: function(){
-                  window.location = "/"
+          if (username.trim() == "" )
+          {
+              jAlert("Username can not be blank", "Incomplete Information");
+          }
+          else if (password.trim() == "" )
+          {
+              jAlert("Password can not be blank", "Incomplete Information");
+          }
+          else
+          {
 
-              },
-              error: function(){
-                  jAlert("Username and password did not match", "Invalid Credentials");
-              }
+              jQuery.ajax({
+                  url:  "/user/verify_user?password=" + password + "&username=" + username ,
+                  type:"POST",
+                  success: function(){
+                      window.location = "/"
 
-          });
+                  },
+                  error: function(){
+                      jAlert("Username and password did not match", "Invalid Credentials");
+                  }
+
+              });
+          }
       }
-  }
-  //-->
-</script>
-<style type="text/css">
-    div.container{
-        background-color: #15191C;
-        width: 50%;
-        margin-left: auto;
-        margin-right: auto;
-        border-radius:30px;
-        font-size: 40px;
-        font-family: arial;
-        text-align: center;
-        margin-top: 100px;;
-    }
-    button.login{
-        font-family: arial;
-        font-size: 35px;
-        background-color:silver;
-        width: 300px;
-        height: 70px;
-        border-radius:35px;
-        border: 1px solid #FFFFFF;
-    }
-    input{
-        font-family: arial;
-        font-size: 35px;
-    }
-    div.main{
-        width: 100%;
-        height: 99.9%;
-        background-color: #15191C;
-        border-width: 1px 0px 0px 0px;
-        border-style: solid;
-        border-color: #f5f5f5;
-    }
-</style>
+      //-->
+  </script>
+  <style type="text/css">
+      div.container{
+          background-color: #0A4958;
+          width: 50%;
+          margin-left: auto;
+          margin-right: auto;
+          border-radius:30px;
+          font-size: 40px;
+          font-family: arial;
+          text-align: center;
+          margin-top: 100px;;
+      }
+      button.login{
+          font-family: arial;
+          font-size: 150%;
+          background-color:silver;
+          width: 40%;
+          height: 200%;
+          border-radius:35px;
+          border: 1px solid #FFFFFF;
+      }
+      input{
+          font-family: arial;
+          font-size: 120%;
+      }
+      div.main{
+          border: 1px solid #FFFFFF;
+          width: 50%;
+          background-color: #0A4958;
+          margin-left: auto;
+          margin-right: auto;
+          text-align: center;
+          position: absolute;
+          top: 25%;
+          left:25%;
+      }
+  </style>
+</head>
+
+<body style="background-color: #0A4958; ">
+<div id="header">
+           <span style="font-size: 45px;color: #C0C0C0;font-family:arial;">
+            Pharmacy Monitoring Dashboard
+          </span>
+  <img src="/images/app.png" style="float: left;margin-top: 5px;margin-left: 5px;height: 80px;">
+</div>
+
 <div class="main">
   <br>
-  <div style="height:380px;color:#f5f5f5;" class="container">
-    <br>DMP LOGIN<br>
-    <table cellspacing="20" style="margin-top:20px;width: 100%;color:#f5f5f5;font-size: 35px;font-family: arial; text-align: center;">
+  <div style="color:#f5f5f5;" >
+    <br><span style="font-size: 150%;font-family: arial;"> Pharmacy Monitoring Dashboard </span><br>
+    <table cellspacing="20" style="margin-top:20px;width: 100%;color:#f5f5f5;font-size: 120%;font-family: arial; text-align: center;">
       <tr>
         <td style="text-align: right">Username</td>
         <td style="text-align: left"><input type="text" id="username"></td>
@@ -91,3 +107,7 @@
 
   </div>
 </div>
+
+</body>
+
+</html>
