--- a/app/views/report/drug_report.html.erb
+++ b/app/views/report/drug_report.html.erb
@@ -23,7 +23,7 @@
                   renderTo: 'pie'
               },
               title: {
-                  text: 'Dispensation Vs Prescription'
+                  text: 'Dispensation Vs Prescription Vs Relocation'
               },
               tooltip: {
                   pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
@@ -44,9 +44,9 @@
               },
               series: [{
                   type: 'pie',
-                  text: 'Dispensation Vs Prescription',
-                  name: 'Dispensation Vs Prescription',
-                  data: [["Prescriptions", <%=@prescription %>],["Dispensations", <%=@dispensation %>]]
+                  text: 'Dispensation Vs Prescription Vs Relocation',
+                  name: 'Dispensation Vs Prescription Vs Relocation',
+                  data: [["Prescriptions", <%=@prescription %>],["Dispensations", <%=@dispensation %>], ["Relocations", <%=@relocation %>]]
 
 
               }],
@@ -68,10 +68,12 @@
 
           var prescriptions = [];
           var dispensations = [];
+          var relocations = [];
 
           <% (@days || []).each do |day| %>
                 prescriptions.push([Date.UTC(<%= day.year %>,<%= day.month - 1 %>,<%= day.day %>), <%= @values[day]['prescription'] %>]);
                 dispensations.push([Date.UTC(<%= day.year %>,<%= day.month - 1 %>,<%= day.day %>),<%= @values[day]['dispensation'] %>]);
+                relocations.push([Date.UTC(<%= day.year %>,<%= day.month - 1 %>,<%= day.day %>),<%= @values[day]['relocation'] %>]);
           <% end %>
 
           var chart = new Highcharts.Chart({
@@ -103,9 +105,9 @@
                   min : 0
               },
               title: {
-                  text : "Drug Prescription and Dispensation Trend"
+                  text : "Drug Utilization Trend"
               },
-              series: [{name: "Prescriptions", data: prescriptions, color:"#FF9950"}, {name: "Dispensations", data: dispensations, color: "#0D233A"}],
+              series: [{name: "Prescriptions", data: prescriptions, color:"#99FF00"}, {name: "Dispensations", data: dispensations, color: "#FF8000"}, {name: "Relocations", data: relocations, color: "#000000"}],
               exporting: { enabled: false },
               credits: {enabled: false}
           });
@@ -119,6 +121,7 @@
   }
   setTimeout("pie_graph()",20);
   setTimeout("trend()",20);
+
 </script>
 <style type="text/css">
     div.graph{
@@ -156,6 +159,7 @@
         <th>Date</th>
         <th>Amount Prescribed</th>
         <th>Amount Dispensed</th>
+        <th>Amount Relocated</th>
         <th>People Who Received Drugs</th>
         <th>Difference</th>
       </tr>
@@ -166,8 +170,9 @@
             <td><%= day.strftime('%d %B %Y') %></td>
             <td><%= number_with_delimiter(value["prescription"], :delimeter => ',') %></td>
             <td><%= number_with_delimiter(value["dispensation"], :delimeter => ',') %></td>
-            <td>&nbsp</td>
-            <% percent = ((value["prescription"].to_f - value["dispensation"].to_f)/value["prescription"].to_f).round(2) %>
+            <td><%= number_with_delimiter(value["relocation"], :delimeter => ',') %></td>
+            <td><%= number_with_delimiter(value["ppo_who_received_drugs"], :delimeter => ',') %></td>
+            <% percent = ((value["prescription"].to_f - value["dispensation"].to_f)/value["prescription"].to_f).round(2) rescue 0 %>
             <td><%= number_with_delimiter((value["prescription"] - value["dispensation"]), :delimeter => ',' ) %> (<%= percent.abs * 100 %>%)</td>
           </tr>
       <% end %>
