--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -15,10 +15,13 @@
         "/report/report_menu?type=drug report",
         "/report/report_menu?type=site report",
         "/report/report_menu?type=aggregate report",
-        "/report/index?stock=true"
+        "/report/stock_out_estimates?type=verified_by_supervision&name=months_of_stock"
+        // "/report/index?stock=true"
       ];
+      // var icons = ['pills3.png','Hospital-icon.png','aggregate.png', 'd_icon.jpeg'];
+      // var title = ['Drug Report', 'Site Report', 'Aggregate Report', "Stock Reports"];
       var icons = ['pills3.png','Hospital-icon.png','aggregate.png', 'd_icon.jpeg'];
-      var title = ['Drug Report', 'Site Report', 'Aggregate Report', "Stock Reports"];
+      var title = ['Drug Report', 'Site Report', 'Aggregate Report', "Months of Stock"];
 <%end%>
   
     loadMenu(title,icons,path);
