Added missing reference on login

--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -1,8 +1,10 @@
 <html>
 <head>
-
-  <link href="/stylesheets/jquery.alerts.css" rel="stylesheet" type="text/css" media="screen" />
   <%= javascript_include_tag 'jquery' %>
+  <script language="javascript" type="text/javascript" src="/javascripts/jquery.ui.draggable.js"></script>
+  <script language="javascript" type="text/javascript" src="/javascripts/jquery.alerts.js"></script>
+  <link href="/stylesheets/jquery.alerts.css" rel="stylesheet" type="text/css" media="screen" />
+
   <script type="text/javascript">
       <!--
       function verify()
