--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,7 +27,7 @@
          <div class="alerts">
            NOTIFICATIONS
          </div>
-         <div style="max-height: 14cm; overflow: auto;">
+         <div style="max-height: 70vh; overflow: auto;">
            <table>
              <% (@notices || []).each do |notice| %>
                  <tr class=<%= cycle('odd','even') %>>
