--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -15,7 +15,8 @@
         "/report/report_menu?type=drug report",
         "/report/report_menu?type=site report",
         "/report/report_menu?type=aggregate report",
-        "/report/stock_out_estimates?type=verified_by_supervision&name=months_of_stock"
+        "/report/stock_out_estimates?type=verified_by_supervision&name=months_of_stock",
+        //"/report/stock_out_estimates?type=verified_by_supervision&name=stock_movement"
         // "/report/index?stock=true"
       ];
       // var icons = ['pills3.png','Hospital-icon.png','aggregate.png', 'd_icon.jpeg'];
